# speed

./: CMakeLists.txt
src/: speexdec.c  speexenc.c
